<refactor>: remove authorizations in users/login and users/register

--- a/paths/users_login.yaml
+++ b/paths/users_login.yaml
@@ -4,6 +4,7 @@ post:
   operationId: loginUser
   summary: Login User
   description: Login an existing user.
+  security: []
   requestBody:
     required: true
     content:
