--- a/paths/users_register.yaml
+++ b/paths/users_register.yaml
@@ -4,6 +4,7 @@ post:
   operationId: registerUser
   summary: Register User
   description: Register a new user.
+  security: []
   requestBody:
     required: true
     content:
