<feat>: add transaction transfer path

--- a/components/schemas/Quote.yaml
+++ b/components/schemas/Quote.yaml
@@ -1,7 +1,7 @@
 type: object
 properties:
   id:
-    $ref: QuoteID.yaml
+    $ref: QuoteId.yaml
   sourceVASPId:
     type: string
     $ref: ./VASPId.yaml
