--- a/components/schemas/TravelRuleData.yaml
+++ b/components/schemas/TravelRuleData.yaml
@@ -1,15 +1,16 @@
 type: object
+required:
+  - originatorVASPId
+  - beneficiaryVASPId
+  - originator
+  - beneficiary
 properties:
   originatorVASPId:
     description: "The VASP ID of the originator."
-    type: string
     $ref: ./VASPId.yaml
-    example: "89e7b5d7-80f0-496f-a2f4-b82421cf7fc6"
   beneficiaryVASPId:
     description: "The VASP ID of the beneficiary."
-    type: string
     $ref: ./VASPId.yaml
-    example: "0830a077-ef4f-42d2-8416-1122f9b98fd8"
   originator:
     description: "Details of the originator involved in the transaction."
     $ref: ./Originator.yaml
