--- a/paths/quotes_list.yaml
+++ b/paths/quotes_list.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-    - Quotes Endpoints
+    - Off-Ramp Transaction Endpoints
   operationId: ListQuotes
   summary: List Quotes
   description: Returns a list of quotes based on the provided parameters.
@@ -10,11 +10,12 @@ post:
       application/json:
         schema:
           type: object
+          required:
+            - fromCurrency
+            - toCurrency
+            - fromAmount
+            - chain
           properties:
-            sourceVASPId:
-              description: "The ID of the source VASP."
-              type: string
-              $ref: ../components/schemas/VASPId.yaml
             fromCurrency:
               description: "The currency of the amount being sold."
               type: string
@@ -28,9 +29,13 @@ post:
               type: string
               example: "100.00"
             chain:
-              description: "The blockchain network for the transaction."
+              description: "The blockchain network for the transaction, formatted as 'eip155:<chainId>'."
               type: string
-              example: "erc20"
+              enum:
+                - eip155:1 # Ethereum Mainnet
+                - eip155:56 # BNB Smart Chain
+                - eip155:137 # Polygon Mainnet
+              example: eip155:1
   responses:
     "200":
       description: Success
@@ -49,7 +54,10 @@ post:
                           $ref: ../components/schemas/Quote.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem.yaml
-    "403":
-      description: Forbidden
-      $ref: ../components/responses/Problem.yaml
+      $ref: ../components/responses/Problem-400.yaml
+    "401":
+      description: Unauthorized
+      $ref: ../components/responses/Problem-401.yaml
+    "500":
+      description: Internal Server Error
+      $ref: ../components/responses/Problem-500.yaml
