--- a/paths/transactions_list.yaml
+++ b/paths/transactions_list.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-    - Offramp Transaction Endpoints
+    - Off-Ramp Transaction Endpoints
   operationId: listTransactions
   summary: List Transactions
   description: Returns a list of transactions. The result of transactions are paginated.
@@ -10,6 +10,9 @@ post:
       application/json:
         schema:
           type: object
+          required:
+            - page
+            - pageSize
           properties:
             page:
               type: number
@@ -40,10 +43,13 @@ post:
                             description: "List of transactions."
                             type: array
                             items:
-                              $ref: ../components/schemas/Transaction.yaml
+                              $ref: ../components/schemas/OffRampTransaction.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem.yaml
-    "403":
-      description: Forbidden
-      $ref: ../components/responses/Problem.yaml
+      $ref: ../components/responses/Problem-400.yaml
+    "401":
+      description: Unauthorized
+      $ref: ../components/responses/Problem-401.yaml
+    "500":
+      description: Internal Server Error
+      $ref: ../components/responses/Problem-500.yaml
