--- a/paths/transactions_{id}.yaml
+++ b/paths/transactions_{id}.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - Offramp Transaction Endpoints
+    - Off-Ramp Transaction Endpoints
   operationId: getTransactionById
   summary: Get Transaction
   description: Returns information about a transaction that has the specified Id.
@@ -23,10 +23,13 @@ get:
                 properties:
                   data:
                     oneOf:
-                      - $ref: ../components/schemas/Transaction.yaml
+                      - $ref: ../components/schemas/OffRampTransaction.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem.yaml
-    "403":
-      description: Forbidden
-      $ref: ../components/responses/Problem.yaml
+      $ref: ../components/responses/Problem-400.yaml
+    "401":
+      description: Unauthorized
+      $ref: ../components/responses/Problem-401.yaml
+    "500":
+      description: Internal Server Error
+      $ref: ../components/responses/Problem-500.yaml
