--- a/paths/users_register.yaml
+++ b/paths/users_register.yaml
@@ -11,6 +11,12 @@ post:
       application/json:
         schema:
           type: object
+          required:
+            - email
+            - password
+            - firstName
+            - lastName
+            - idNumber
           properties:
             email:
               type: string
@@ -57,7 +63,10 @@ post:
 
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem.yaml
-    "403":
-      description: Forbidden
-      $ref: ../components/responses/Problem.yaml
+      $ref: ../components/responses/Problem-400.yaml
+    "401":
+      description: Unauthorized
+      $ref: ../components/responses/Problem-401.yaml
+    "500":
+      description: Internal Server Error
+      $ref: ../components/responses/Problem-500.yaml
