--- a/paths/vasps_list.yaml
+++ b/paths/vasps_list.yaml
@@ -10,6 +10,9 @@ post:
       application/json:
         schema:
           type: object
+          required:
+            - page
+            - pageSize
           properties:
             page:
               type: number
@@ -43,7 +46,10 @@ post:
                               $ref: ../components/schemas/VASP.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem.yaml
-    "403":
-      description: Forbidden
-      $ref: ../components/responses/Problem.yaml
+      $ref: ../components/responses/Problem-400.yaml
+    "401":
+      description: Unauthorized
+      $ref: ../components/responses/Problem-401.yaml
+    "500":
+      description: Internal Server Error
+      $ref: ../components/responses/Problem-500.yaml
