--- a/paths/offRamp/transactions_cancel.yaml
+++ b/paths/offRamp/transactions_cancel.yaml
@@ -1,9 +1,9 @@
 post:
   tags:
     - Off-Ramp Transaction Endpoints
-  operationId: acceptTransaction
-  summary: Accept Transaction
-  description: Accept transaction by its ID.
+  operationId: cancelTransaction
+  summary: Cancel Transaction
+  description: Cancel transaction by its ID.
   requestBody:
     required: true
     content:
@@ -15,7 +15,7 @@ post:
           properties:
             id:
               type: string
-              $ref: ../components/schemas/TransactionId.yaml
+              $ref: ../../components/schemas/TransactionId.yaml
   responses:
     "200":
       description: Success
@@ -23,23 +23,23 @@ post:
         application/json:
           schema:
             allOf:
-              - $ref: ../components/schemas/Response.yaml
+              - $ref: ../../components/schemas/Response.yaml
               - type: object
                 properties:
                   data:
                     oneOf:
-                      - $ref: ../components/schemas/OffRampTransaction.yaml
+                      - $ref: ../../components/schemas/OffRampTransaction.yaml
                     example:
                       id: "8cdd5b98-86d3-4921-8bb3-a2920f9bb350"
-                      status: "ACCEPTED"
+                      status: "CANCELLED"
                       createdTime: "2025-08-07T09:00:00Z"
                       updatedTime: "2025-08-07T10:30:00Z"
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem-400.yaml
+      $ref: ../../components/responses/Problem-400.yaml
     "401":
       description: Unauthorized
-      $ref: ../components/responses/Problem-401.yaml
+      $ref: ../../components/responses/Problem-401.yaml
     "500":
       description: Internal Server Error
-      $ref: ../components/responses/Problem-500.yaml
+      $ref: ../../components/responses/Problem-500.yaml
