--- a/paths/offRamp/transactions.yaml
+++ b/paths/offRamp/transactions.yaml
@@ -1,7 +1,7 @@
 post:
   tags:
     - Off-Ramp Transaction Endpoints
-  operationId: createTransaction
+  operationId: createOffRampTransaction
   summary: Create Transaction
   description: Create a new transaction.
   requestBody:
@@ -19,22 +19,22 @@ post:
           properties:
             originatorVASPId:
               type: string
-              $ref: ../components/schemas/VASPId.yaml
+              $ref: ../../components/schemas/VASPId.yaml
             beneficiaryVASPId:
               type: string
-              $ref: ../components/schemas/VASPId.yaml
+              $ref: ../../components/schemas/VASPId.yaml
             originatorCustomerId:
               type: string
-              $ref: ../components/schemas/CustomerId.yaml
+              $ref: ../../components/schemas/CustomerId.yaml
             quoteId:
               type: string
-              $ref: ../components/schemas/QuoteId.yaml
+              $ref: ../../components/schemas/QuoteId.yaml
             travelRuleData:
               type: object
-              $ref: ../components/schemas/TravelRuleData.yaml
+              $ref: ../../components/schemas/TravelRuleData.yaml
             withdrawalInfo:
               type: object
-              $ref: ../components/schemas/WithdrawalInfo.yaml
+              $ref: ../../components/schemas/WithdrawalInfo.yaml
 
   responses:
     "200":
@@ -43,18 +43,18 @@ post:
         application/json:
           schema:
             allOf:
-              - $ref: ../components/schemas/Response.yaml
+              - $ref: ../../components/schemas/Response.yaml
               - type: object
                 properties:
                   data:
                     oneOf:
-                      - $ref: ../components/schemas/OffRampTransaction.yaml
+                      - $ref: ../../components/schemas/OffRampTransaction.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem-400.yaml
+      $ref: ../../components/responses/Problem-400.yaml
     "401":
       description: Unauthorized
-      $ref: ../components/responses/Problem-401.yaml
+      $ref: ../../components/responses/Problem-401.yaml
     "500":
       description: Internal Server Error
-      $ref: ../components/responses/Problem-500.yaml
+      $ref: ../../components/responses/Problem-500.yaml
