--- a/paths/offRamp/transactions_list.yaml
+++ b/paths/offRamp/transactions_list.yaml
@@ -29,7 +29,7 @@ post:
         application/json:
           schema:
             allOf:
-              - $ref: ../components/schemas/Response.yaml
+              - $ref: ../../components/schemas/Response.yaml
               - type: object
                 properties:
                   data:
@@ -38,18 +38,18 @@ post:
                         properties:
                           pageInfo:
                             description: "Pagination information."
-                            $ref: ../components/schemas/PageInfo.yaml
+                            $ref: ../../components/schemas/PageInfo.yaml
                           transactions:
                             description: "List of transactions."
                             type: array
                             items:
-                              $ref: ../components/schemas/OffRampTransaction.yaml
+                              $ref: ../../components/schemas/OffRampTransaction.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem-400.yaml
+      $ref: ../../components/responses/Problem-400.yaml
     "401":
       description: Unauthorized
-      $ref: ../components/responses/Problem-401.yaml
+      $ref: ../../components/responses/Problem-401.yaml
     "500":
       description: Internal Server Error
-      $ref: ../components/responses/Problem-500.yaml
+      $ref: ../../components/responses/Problem-500.yaml
