--- a/paths/offRamp/transactions_{id}.yaml
+++ b/paths/offRamp/transactions_{id}.yaml
@@ -10,7 +10,7 @@ get:
       required: true
       schema:
         type: string
-        $ref: ../components/schemas/TransactionId.yaml
+        $ref: ../../components/schemas/TransactionId.yaml
   responses:
     "200":
       description: Success
@@ -18,18 +18,18 @@ get:
         application/json:
           schema:
             allOf:
-              - $ref: ../components/schemas/Response.yaml
+              - $ref: ../../components/schemas/Response.yaml
               - type: object
                 properties:
                   data:
                     oneOf:
-                      - $ref: ../components/schemas/OffRampTransaction.yaml
+                      - $ref: ../../components/schemas/OffRampTransaction.yaml
     "400":
       description: Bad Request
-      $ref: ../components/responses/Problem-400.yaml
+      $ref: ../../components/responses/Problem-400.yaml
     "401":
       description: Unauthorized
-      $ref: ../components/responses/Problem-401.yaml
+      $ref: ../../components/responses/Problem-401.yaml
     "500":
       description: Internal Server Error
-      $ref: ../components/responses/Problem-500.yaml
+      $ref: ../../components/responses/Problem-500.yaml
