--- a/paths/onRamp/transactions.yaml
+++ b/paths/onRamp/transactions.yaml
@@ -12,6 +12,7 @@ post:
           type: object
           required:
             - quoteId
+            - recipientAddress
           properties:
             quoteId:
               type: string
